[package]
name = "music-analyzer-wasm-rs"
description = "Audio analysis routines to assist with music instrument practice"
version = "0.1.0"
repository = "https://github.com/peter-suggate/music-analyzer-wasm-rs"
authors = ["peter-suggate <petersuggate@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
cqt = { git = "https://github.com/alexjago/cqt" }
circular-queue = "0.2.4"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.10"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
